--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Formation - Valorant Tournament</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
+     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
     <div id="menu-bar">
